# codex-tts

./: .gitignore  README.en.md  README.ja.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-19-codex-tts-hybrid-daemon.md  2026-03-19-codex-tts-next-optimizations.md  2026-03-19-codex-tts-next-week-todo.md  2026-03-19-codex-tts.md
docs/superpowers/specs/: 2026-03-19-codex-tts-design.md  2026-03-19-codex-tts-hybrid-daemon-design.md
macos/CodexTTSMenuBar/: Package.swift
macos/CodexTTSMenuBar/AppResources/: Info.plist.template
macos/CodexTTSMenuBar/CodexTTSMenuBar/: CLIClient.swift  CodexTTSMenuBarApp.swift  MenuBarViewModel.swift  Models.swift
macos/CodexTTSMenuBar/SmokeTests/CodexTTSMenuBarSmoke/: main.swift
scripts/: bootstrap.sh  install.sh  package-menubar-app.sh  uninstall.sh
src/codex_tts/: cli.py  config.py  daemon.py  daemon_store.py  diagnostics.py  ipc.py  models.py  rollout.py  service.py  session_manager.py  session_store.py  speech_policy.py  speech_text.py
src/codex_tts/tts/: __init__.py  base.py  say.py
tests/: test_cli.py  test_config.py  test_daemon.py  test_daemon_store.py  test_diagnostics.py  test_install_script.py  test_ipc.py  test_rollout.py  test_service.py  test_session_manager.py  test_session_store.py  test_speech_policy.py  test_speech_text.py  test_tts.py
tests/fixtures/: fake_codex.py
