[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-tts"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["coverage>=7.0", "pytest>=9.0"]

[project.scripts]
codex-tts = "codex_tts.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/codex_tts"]

[tool.coverage.report]
fail_under = 100
show_missing = true
